crates/aranya-policy-lang/tests/data/match_expression/block_without_subexpression.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 4 column 13:  --> 4:13
  |
4 |             1
  |             ^---
  |
  = expected identifier, return_expr, action_call, publish_statement, let_statement, check_statement, match_statement, if_statement, finish_statement, map_statement, create_statement, update_statement, delete_statement, emit_statement, or debug_assert
